gitops/apps/basic-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "59900"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops-apps
    kubernetes.io/metadata.name: basic-app
    openshift.io/user-monitoring: "true"
  name: basic-app
