gitops/apps/basic-app/base/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "60200"
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "60200"
  name: allow-ingress-from-router-and-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: basic-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: basic-app
      ports:
        - port: 8080
          protocol: TCP
